# FreeCAD-SiteContext

./: README.md  package.xml  pyproject.toml
freecad/SiteContextWB/: add_location_dialog.py  commands.py  geocode.py  imagery.py  overpass_client.py  settings.py  site_builder.py  terrain.py
verify/: headless_regression.py  live_imagery_smoke.py  out-headless.txt  out-smoke-esri-cache.txt  out-smoke-esri.txt  out-smoke-osm.txt
verify/out-smoke/: SiteContext_Smoke_esri_world_imagery.FCStd  SiteContext_Smoke_osm_standard.FCStd
