[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-sitecontext"
version = "0.3.0"
description = "FreeCAD's Add-Location: 2D satellite/OSM maps and OSM buildings + terrain site context."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["freecad*"]
